// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Diagram service endpoint returns an array of multiple component edges renders the page 1`] = `
<div
  class="m-3"
>
  <div>
    <h1>
      Test Diagram Name 1
    </h1>
     
    <div />
     
    <div
      class="mt-3 mb-4"
      components="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    >
       
      <button
        aria-controls="filters"
        aria-expanded="false"
        class="btn btn-primary collapsed"
        id="toggleFilters"
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="blank"
          class="bi-blank b-icon bi"
          fill="currentColor"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g />
        </svg>
         Filters
  
      </button>
       
      <transition-stub
        class="mt-3"
        css="true"
        enteractiveclass="collapsing"
        enterclass=""
        entertoclass="collapse show"
        leaveactiveclass="collapsing"
        leaveclass="collapse show"
        leavetoclass="collapse"
      >
        <div
          class="collapse"
          id="filters"
          style="display: none;"
        >
          <div
            class="card-columns"
          >
            <!---->
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <div
                  class="form-row form-group"
                  id="__BVID__133"
                  role="group"
                >
                  <label
                    class="col-6 col-form-label col-form-label-sm"
                    for="graph-scope-related-radius"
                    id="__BVID__133__BV_label_"
                  >
                    Radius:
                  </label>
                  <div
                    class="col"
                  >
                    <select
                      class="custom-select custom-select-sm"
                      id="graph-scope-related-radius"
                    >
                      <option
                        value="0"
                      >
                        0
                      </option>
                      <option
                        value="1"
                      >
                        1
                      </option>
                      <option
                        value="2"
                      >
                        2
                      </option>
                      <option
                        value="3"
                      >
                        3
                      </option>
                      <option
                        value="4"
                      >
                        4
                      </option>
                      <option
                        value="5"
                      >
                        5
                      </option>
                      <option
                        value="6"
                      >
                        6
                      </option>
                      <option
                        value="7"
                      >
                        7
                      </option>
                      <option
                        value="8"
                      >
                        8
                      </option>
                      <option
                        value="9"
                      >
                        9
                      </option>
                      <option
                        value="10"
                      >
                        10
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
             
            <!---->
             
            <!---->
             
            <!---->
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__135"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__135__BV_label_"
                    tabindex="-1"
                  >
                    Teams
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__136"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_0"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_0"
                        >
                          <span>
                            test-team-id-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_1"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_1"
                        >
                          <span>
                            test-team-id-1-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_2"
                          name="team"
                          type="checkbox"
                          value="test-team-id-2-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_2"
                        >
                          <span>
                            test-team-id-2-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_3"
                          name="team"
                          type="checkbox"
                          value="test-team-id-2-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_3"
                        >
                          <span>
                            test-team-id-2-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_4"
                          name="team"
                          type="checkbox"
                          value="test-team-id-3-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_4"
                        >
                          <span>
                            test-team-id-3-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_5"
                          name="team"
                          type="checkbox"
                          value="test-team-id-3-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_5"
                        >
                          <span>
                            test-team-id-3-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_6"
                          name="team"
                          type="checkbox"
                          value="test-team-id-4-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_6"
                        >
                          <span>
                            test-team-id-4-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_7"
                          name="team"
                          type="checkbox"
                          value="test-team-id-4-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_7"
                        >
                          <span>
                            test-team-id-4-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_8"
                          name="team"
                          type="checkbox"
                          value="test-team-id-5-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_8"
                        >
                          <span>
                            test-team-id-5-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_9"
                          name="team"
                          type="checkbox"
                          value="test-team-id-5-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_9"
                        >
                          <span>
                            test-team-id-5-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_10"
                          name="team"
                          type="checkbox"
                          value="test-team-id-6-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_10"
                        >
                          <span>
                            test-team-id-6-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__136_BV_option_11"
                          name="team"
                          type="checkbox"
                          value="test-team-id-6-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__136_BV_option_11"
                        >
                          <span>
                            test-team-id-6-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__149"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__149__BV_label_"
                    tabindex="-1"
                  >
                    Tags
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__150"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_0"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_0"
                        >
                          <span>
                            test-tag-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_1"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_1"
                        >
                          <span>
                            test-tag-1-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_2"
                          name="tag"
                          type="checkbox"
                          value="test-tag-2-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_2"
                        >
                          <span>
                            test-tag-2-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_3"
                          name="tag"
                          type="checkbox"
                          value="test-tag-2-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_3"
                        >
                          <span>
                            test-tag-2-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_4"
                          name="tag"
                          type="checkbox"
                          value="test-tag-3-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_4"
                        >
                          <span>
                            test-tag-3-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_5"
                          name="tag"
                          type="checkbox"
                          value="test-tag-3-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_5"
                        >
                          <span>
                            test-tag-3-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_6"
                          name="tag"
                          type="checkbox"
                          value="test-tag-4-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_6"
                        >
                          <span>
                            test-tag-4-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_7"
                          name="tag"
                          type="checkbox"
                          value="test-tag-4-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_7"
                        >
                          <span>
                            test-tag-4-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_8"
                          name="tag"
                          type="checkbox"
                          value="test-tag-5-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_8"
                        >
                          <span>
                            test-tag-5-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_9"
                          name="tag"
                          type="checkbox"
                          value="test-tag-5-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_9"
                        >
                          <span>
                            test-tag-5-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_10"
                          name="tag"
                          type="checkbox"
                          value="test-tag-6-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_10"
                        >
                          <span>
                            test-tag-6-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__150_BV_option_11"
                          name="tag"
                          type="checkbox"
                          value="test-tag-6-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__150_BV_option_11"
                        >
                          <span>
                            test-tag-6-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__163"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__163__BV_label_"
                    tabindex="-1"
                  >
                    Component Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__164"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__164_BV_option_0"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__164_BV_option_0"
                        >
                          <span>
                            test-component-type-id-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__164_BV_option_1"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__164_BV_option_1"
                        >
                          <span>
                            test-component-type-id-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__164_BV_option_2"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-3"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__164_BV_option_2"
                        >
                          <span>
                            test-component-type-id-3
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__164_BV_option_3"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-4"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__164_BV_option_3"
                        >
                          <span>
                            test-component-type-id-4
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__164_BV_option_4"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-5"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__164_BV_option_4"
                        >
                          <span>
                            test-component-type-id-5
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__164_BV_option_5"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-6"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__164_BV_option_5"
                        >
                          <span>
                            test-component-type-id-6
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__171"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__171__BV_label_"
                    tabindex="-1"
                  >
                    Platforms
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__172"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__172_BV_option_0"
                          name="platformId"
                          type="checkbox"
                          value="undefined"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__172_BV_option_0"
                        >
                          <span>
                            undefined
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <div
                  class="form-group"
                  id="__BVID__174"
                  role="group"
                >
                  <label
                    class="d-block"
                    for="component-filter"
                    id="__BVID__174__BV_label_"
                  >
                    Component
                  </label>
                  <div>
                    <select
                      class="custom-select custom-select-sm"
                      id="component-filter"
                    >
                      <option
                        value=""
                      >
                        Please select a component
                      </option>
                      <option
                        value="test-component-id-1"
                      >
                        test-component-id-1
                      </option>
                      <option
                        value="test-component-id-2"
                      >
                        test-component-id-2
                      </option>
                      <option
                        value="test-component-id-3"
                      >
                        test-component-id-3
                      </option>
                      <option
                        value="test-component-id-4"
                      >
                        test-component-id-4
                      </option>
                      <option
                        value="test-component-id-5"
                      >
                        test-component-id-5
                      </option>
                      <option
                        value="test-component-id-6"
                      >
                        test-component-id-6
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
     
    <div
      class="card-columns"
    >
      <div
        class="card bg-secondary"
      >
        <!---->
        <!---->
        <div
          class="card-body p-2"
        >
          <!---->
          <!---->
          <div
            class="form-row form-group"
            id="__BVID__176"
            role="group"
          >
            <label
              class="col-6 col-form-label col-form-label-sm"
              for="graph-zoom"
              id="__BVID__176__BV_label_"
            >
              Zoom:
            </label>
            <div
              class="col"
            >
              <select
                class="custom-select custom-select-sm"
                id="graph-zoom"
              >
                <option
                  value="25"
                >
                  25%
                </option>
                <option
                  value="50"
                >
                  50%
                </option>
                <option
                  value="75"
                >
                  75%
                </option>
                <option
                  value="100"
                >
                  100%
                </option>
                <option
                  value="125"
                >
                  125%
                </option>
                <option
                  value="150"
                >
                  150%
                </option>
                <option
                  value="200"
                >
                  200%
                </option>
                <option
                  value="400"
                >
                  400%
                </option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
     
    <transition-stub
      class="my-3"
      css="true"
      enteractiveclass=""
      enterclass=""
      entertoclass="show"
      leaveactiveclass=""
      leaveclass="show"
      leavetoclass=""
      name=""
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="alert alert-dismissible alert-info"
        role="alert"
      >
        <button
          aria-label="Close"
          class="close"
          type="button"
        >
          ×
        </button>
        
    Click a dot in the diagram to see more information about that component
  
      </div>
    </transition-stub>
     
    <div
      class="diagram-graph"
    >
      <svg
        height="1200"
        overflow="auto"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          class="graph-background"
          fill-opacity="0"
        />
         
        <defs>
          <marker
            class="edge-marker all-edge-marker"
            id="graph-all-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker other-edge-marker"
            id="graph-other-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker scope-related-edge-marker"
            id="graph-scope-related-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker scoped-edge-marker"
            id="graph-scoped-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker related-edge-marker"
            id="graph-related-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker direct-edge-marker"
            id="graph-direct-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker selected-edge-marker"
            id="graph-selected-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
        </defs>
         
        <g />
        <g />
        <g />
        <g>
          <path
            class="edge scoped-edge"
            d="M50,66L50,134"
            id="graph-edge-0"
            marker-end="url(#graph-scoped-edge-marker)"
          />
          <path
            class="edge scoped-edge"
            d="M50,166L50,234"
            id="graph-edge-1"
            marker-end="url(#graph-scoped-edge-marker)"
          />
        </g>
        <g />
        <g />
        <g />
         
        <g />
        <g />
        <g />
        <g>
          <circle
            class="node scoped-node"
            cx="50"
            cy="50"
            id="graph-node-0"
            r="16"
            title="Test Component Name 1"
          />
          <circle
            class="node scoped-node"
            cx="50"
            cy="150"
            id="graph-node-1"
            r="16"
            title="Test Component Name 2"
          />
          <circle
            class="node scoped-node"
            cx="50"
            cy="250"
            id="graph-node-2"
            r="16"
            title="Test Component Name 3"
          />
        </g>
        <g />
        <g />
        <g />
         
        <g />
        <g />
        <g />
        <g>
          <text
            class="node-label scoped-node-label"
            font-size="14"
            stroke-width="1.75"
            x="73"
            y="70"
          >
            <tspan
              x="73"
              y="70"
            >
              
        Test Component Name 1
      
            </tspan>
          </text>
          <text
            class="node-label scoped-node-label"
            font-size="14"
            stroke-width="1.75"
            x="73"
            y="170"
          >
            <tspan
              x="73"
              y="170"
            >
              
        Test Component Name 2
      
            </tspan>
          </text>
          <text
            class="node-label scoped-node-label"
            font-size="14"
            stroke-width="1.75"
            x="73"
            y="270"
          >
            <tspan
              x="73"
              y="270"
            >
              
        Test Component Name 3
      
            </tspan>
          </text>
        </g>
        <g />
        <g />
        <g />
      </svg>
    </div>
     
    <div
      class="b-sidebar-outer"
      tabindex="-1"
    >
      <!---->
      <transition-stub
        css="true"
        enteractiveclass="slide"
        enterclass=""
        entertoclass="show"
        leaveactiveclass="slide"
        leaveclass="show"
        leavetoclass=""
      >
        <div
          aria-hidden="true"
          aria-modal="true"
          class="b-sidebar b-sidebar-right bg-dark text-light"
          id="component"
          role="dialog"
          style="width: 800px; display: none;"
          tabindex="-1"
        >
          <header
            class="b-sidebar-header"
          >
            <button
              aria-label="Close"
              class="close text-light"
              type="button"
            >
              <svg
                aria-label="x"
                class="bi-x b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
                  />
                </g>
              </svg>
            </button>
            <span />
          </header>
          <div
            class="b-sidebar-body"
          >
            <div
              class="m-3"
            >
              <!---->
            </div>
          </div>
          <!---->
        </div>
      </transition-stub>
      <!---->
      <transition-stub
        css="true"
        enteractiveclass="fade"
        enterclass=""
        entertoclass="show"
        leaveactiveclass="fade"
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          class="b-sidebar-backdrop bg-dark"
          style="display: none;"
        />
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Index when Get Diagram service endpoint returns no edges renders the page 1`] = `
<div
  class="m-3"
>
  <div>
    <h1>
      Test Diagram Name 1
    </h1>
     
    <div />
     
    <div
      class="mt-3 mb-4"
      components="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    >
       
      <button
        aria-controls="filters"
        aria-expanded="false"
        class="btn btn-primary collapsed"
        id="toggleFilters"
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="blank"
          class="bi-blank b-icon bi"
          fill="currentColor"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g />
        </svg>
         Filters
  
      </button>
       
      <transition-stub
        class="mt-3"
        css="true"
        enteractiveclass="collapsing"
        enterclass=""
        entertoclass="collapse show"
        leaveactiveclass="collapsing"
        leaveclass="collapse show"
        leavetoclass="collapse"
      >
        <div
          class="collapse"
          id="filters"
          style="display: none;"
        >
          <div
            class="card-columns"
          >
            <!---->
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <div
                  class="form-row form-group"
                  id="__BVID__72"
                  role="group"
                >
                  <label
                    class="col-6 col-form-label col-form-label-sm"
                    for="graph-scope-related-radius"
                    id="__BVID__72__BV_label_"
                  >
                    Radius:
                  </label>
                  <div
                    class="col"
                  >
                    <select
                      class="custom-select custom-select-sm"
                      id="graph-scope-related-radius"
                    >
                      <option
                        value="0"
                      >
                        0
                      </option>
                      <option
                        value="1"
                      >
                        1
                      </option>
                      <option
                        value="2"
                      >
                        2
                      </option>
                      <option
                        value="3"
                      >
                        3
                      </option>
                      <option
                        value="4"
                      >
                        4
                      </option>
                      <option
                        value="5"
                      >
                        5
                      </option>
                      <option
                        value="6"
                      >
                        6
                      </option>
                      <option
                        value="7"
                      >
                        7
                      </option>
                      <option
                        value="8"
                      >
                        8
                      </option>
                      <option
                        value="9"
                      >
                        9
                      </option>
                      <option
                        value="10"
                      >
                        10
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
             
            <!---->
             
            <!---->
             
            <!---->
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__74"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__74__BV_label_"
                    tabindex="-1"
                  >
                    Teams
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__75"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_0"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_0"
                        >
                          <span>
                            test-team-id-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_1"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_1"
                        >
                          <span>
                            test-team-id-1-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_2"
                          name="team"
                          type="checkbox"
                          value="test-team-id-2-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_2"
                        >
                          <span>
                            test-team-id-2-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_3"
                          name="team"
                          type="checkbox"
                          value="test-team-id-2-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_3"
                        >
                          <span>
                            test-team-id-2-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_4"
                          name="team"
                          type="checkbox"
                          value="test-team-id-3-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_4"
                        >
                          <span>
                            test-team-id-3-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_5"
                          name="team"
                          type="checkbox"
                          value="test-team-id-3-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_5"
                        >
                          <span>
                            test-team-id-3-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_6"
                          name="team"
                          type="checkbox"
                          value="test-team-id-4-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_6"
                        >
                          <span>
                            test-team-id-4-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_7"
                          name="team"
                          type="checkbox"
                          value="test-team-id-4-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_7"
                        >
                          <span>
                            test-team-id-4-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_8"
                          name="team"
                          type="checkbox"
                          value="test-team-id-5-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_8"
                        >
                          <span>
                            test-team-id-5-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_9"
                          name="team"
                          type="checkbox"
                          value="test-team-id-5-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_9"
                        >
                          <span>
                            test-team-id-5-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_10"
                          name="team"
                          type="checkbox"
                          value="test-team-id-6-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_10"
                        >
                          <span>
                            test-team-id-6-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__75_BV_option_11"
                          name="team"
                          type="checkbox"
                          value="test-team-id-6-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__75_BV_option_11"
                        >
                          <span>
                            test-team-id-6-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__88"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__88__BV_label_"
                    tabindex="-1"
                  >
                    Tags
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__89"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_0"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_0"
                        >
                          <span>
                            test-tag-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_1"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_1"
                        >
                          <span>
                            test-tag-1-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_2"
                          name="tag"
                          type="checkbox"
                          value="test-tag-2-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_2"
                        >
                          <span>
                            test-tag-2-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_3"
                          name="tag"
                          type="checkbox"
                          value="test-tag-2-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_3"
                        >
                          <span>
                            test-tag-2-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_4"
                          name="tag"
                          type="checkbox"
                          value="test-tag-3-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_4"
                        >
                          <span>
                            test-tag-3-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_5"
                          name="tag"
                          type="checkbox"
                          value="test-tag-3-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_5"
                        >
                          <span>
                            test-tag-3-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_6"
                          name="tag"
                          type="checkbox"
                          value="test-tag-4-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_6"
                        >
                          <span>
                            test-tag-4-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_7"
                          name="tag"
                          type="checkbox"
                          value="test-tag-4-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_7"
                        >
                          <span>
                            test-tag-4-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_8"
                          name="tag"
                          type="checkbox"
                          value="test-tag-5-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_8"
                        >
                          <span>
                            test-tag-5-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_9"
                          name="tag"
                          type="checkbox"
                          value="test-tag-5-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_9"
                        >
                          <span>
                            test-tag-5-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_10"
                          name="tag"
                          type="checkbox"
                          value="test-tag-6-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_10"
                        >
                          <span>
                            test-tag-6-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__89_BV_option_11"
                          name="tag"
                          type="checkbox"
                          value="test-tag-6-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__89_BV_option_11"
                        >
                          <span>
                            test-tag-6-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__102"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__102__BV_label_"
                    tabindex="-1"
                  >
                    Component Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__103"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__103_BV_option_0"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__103_BV_option_0"
                        >
                          <span>
                            test-component-type-id-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__103_BV_option_1"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__103_BV_option_1"
                        >
                          <span>
                            test-component-type-id-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__103_BV_option_2"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-3"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__103_BV_option_2"
                        >
                          <span>
                            test-component-type-id-3
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__103_BV_option_3"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-4"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__103_BV_option_3"
                        >
                          <span>
                            test-component-type-id-4
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__103_BV_option_4"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-5"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__103_BV_option_4"
                        >
                          <span>
                            test-component-type-id-5
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__103_BV_option_5"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-6"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__103_BV_option_5"
                        >
                          <span>
                            test-component-type-id-6
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__110"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__110__BV_label_"
                    tabindex="-1"
                  >
                    Platforms
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__111"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__111_BV_option_0"
                          name="platformId"
                          type="checkbox"
                          value="undefined"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__111_BV_option_0"
                        >
                          <span>
                            undefined
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body p-2"
              >
                <!---->
                <!---->
                <div
                  class="form-group"
                  id="__BVID__113"
                  role="group"
                >
                  <label
                    class="d-block"
                    for="component-filter"
                    id="__BVID__113__BV_label_"
                  >
                    Component
                  </label>
                  <div>
                    <select
                      class="custom-select custom-select-sm"
                      id="component-filter"
                    >
                      <option
                        value=""
                      >
                        Please select a component
                      </option>
                      <option
                        value="test-component-id-1"
                      >
                        test-component-id-1
                      </option>
                      <option
                        value="test-component-id-2"
                      >
                        test-component-id-2
                      </option>
                      <option
                        value="test-component-id-3"
                      >
                        test-component-id-3
                      </option>
                      <option
                        value="test-component-id-4"
                      >
                        test-component-id-4
                      </option>
                      <option
                        value="test-component-id-5"
                      >
                        test-component-id-5
                      </option>
                      <option
                        value="test-component-id-6"
                      >
                        test-component-id-6
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
     
    <div
      class="card-columns"
    >
      <div
        class="card bg-secondary"
      >
        <!---->
        <!---->
        <div
          class="card-body p-2"
        >
          <!---->
          <!---->
          <div
            class="form-row form-group"
            id="__BVID__115"
            role="group"
          >
            <label
              class="col-6 col-form-label col-form-label-sm"
              for="graph-zoom"
              id="__BVID__115__BV_label_"
            >
              Zoom:
            </label>
            <div
              class="col"
            >
              <select
                class="custom-select custom-select-sm"
                id="graph-zoom"
              >
                <option
                  value="25"
                >
                  25%
                </option>
                <option
                  value="50"
                >
                  50%
                </option>
                <option
                  value="75"
                >
                  75%
                </option>
                <option
                  value="100"
                >
                  100%
                </option>
                <option
                  value="125"
                >
                  125%
                </option>
                <option
                  value="150"
                >
                  150%
                </option>
                <option
                  value="200"
                >
                  200%
                </option>
                <option
                  value="400"
                >
                  400%
                </option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
     
    <transition-stub
      class="my-3"
      css="true"
      enteractiveclass=""
      enterclass=""
      entertoclass="show"
      leaveactiveclass=""
      leaveclass="show"
      leavetoclass=""
      name=""
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="alert alert-dismissible alert-info"
        role="alert"
      >
        <button
          aria-label="Close"
          class="close"
          type="button"
        >
          ×
        </button>
        
    Click a dot in the diagram to see more information about that component
  
      </div>
    </transition-stub>
     
    <div
      class="diagram-graph"
    >
      <svg
        height="1200"
        overflow="auto"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          class="graph-background"
          fill-opacity="0"
        />
         
        <defs>
          <marker
            class="edge-marker all-edge-marker"
            id="graph-all-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker other-edge-marker"
            id="graph-other-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker scope-related-edge-marker"
            id="graph-scope-related-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker scoped-edge-marker"
            id="graph-scoped-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker related-edge-marker"
            id="graph-related-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker direct-edge-marker"
            id="graph-direct-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="edge-marker selected-edge-marker"
            id="graph-selected-edge-marker"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="7.1"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
        </defs>
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
      </svg>
    </div>
     
    <div
      class="b-sidebar-outer"
      tabindex="-1"
    >
      <!---->
      <transition-stub
        css="true"
        enteractiveclass="slide"
        enterclass=""
        entertoclass="show"
        leaveactiveclass="slide"
        leaveclass="show"
        leavetoclass=""
      >
        <div
          aria-hidden="true"
          aria-modal="true"
          class="b-sidebar b-sidebar-right bg-dark text-light"
          id="component"
          role="dialog"
          style="width: 800px; display: none;"
          tabindex="-1"
        >
          <header
            class="b-sidebar-header"
          >
            <button
              aria-label="Close"
              class="close text-light"
              type="button"
            >
              <svg
                aria-label="x"
                class="bi-x b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
                  />
                </g>
              </svg>
            </button>
            <span />
          </header>
          <div
            class="b-sidebar-body"
          >
            <div
              class="m-3"
            >
              <!---->
            </div>
          </div>
          <!---->
        </div>
      </transition-stub>
      <!---->
      <transition-stub
        css="true"
        enteractiveclass="fade"
        enterclass=""
        entertoclass="show"
        leaveactiveclass="fade"
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          class="b-sidebar-backdrop bg-dark"
          style="display: none;"
        />
      </transition-stub>
    </div>
  </div>
</div>
`;
